Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/devtools/client/debugger.properties
+++ b/hu/devtools/client/debugger.properties
@@ -688,9 +688,11 @@ inlinePreview.hide.label=Soron belüli előnézet elrejtése
 
 # LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
 # that will toggle display of inline preview
+inlinePreview.toggle.label=Soron belüli változóelőnézet
 
 # LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
 # tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Soron belüli előnézet megjelenítése a hibakereső szerkesztőjében
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Hibakereső beállításai
@@ -705,6 +707,7 @@ settings.disableJavaScript.tooltip=Kikapcsolja a JavaScriptet (frissítést igé
 
 # LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
 # tooltip for toggling the source maps feature
+settings.toggleSourceMaps.tooltip=Forrástérképek engedélyezése, hogy a fejlesztői eszközök betölthessék az eredeti forrásokat a generáltak mellett
 
 # LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
 # label for toggling the source maps feature
