Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/devtools/client/netmonitor.properties
+++ b/hu/devtools/client/netmonitor.properties
@@ -874,10 +874,12 @@ netmonitor.actionbar.addBlockedUrl=Minta hozzáadása
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=URL-minták hozzáadása a megfelelő kérések blokkolásához.
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
 # add notice that explains ways to add blocking pattern that is displayed when
 # network blocking list is empty
+netmonitor.actionbar.requestBlockingAddNotice=Kezdje egy minta hozzáadásával, vagy húzzon át egy sort a hálózat táblázatból.
 
 # LOCALIZATION NOTE (netmonitor.requestBlockingMenu.removeAllBlockedUrls): This is the
 # context menu item for removing all blocked URLs
