Pontoon: Update Hungarian (hu) localization of Firefox Co-authored-by: Balázs Meskó <meskobalazs@mailbox.org>

--- a/hu/dom/chrome/dom/dom.properties
+++ b/hu/dom/chrome/dom/dom.properties
@@ -426,3 +426,4 @@ WebShareAPI_Failed=A megosztási művelet nem sikerült.
 WebShareAPI_Aborted=A megosztási műveletet megszakították.
 # LOCALIZATION NOTE (UnknownProtocolNavigationPrevented): %1$S is the destination URL.
 UnknownProtocolNavigationPrevented=Az ismeretlen protokoll miatt meg lett akadályozva a navigáció: „%1$S”.
+PostMessageSharedMemoryObjectToCrossOriginWarning=Nem küldhet osztott memóriában lévő objektumot egy más eredetű ablaknak.
