--- a/hu/netwerk/necko.properties
+++ b/hu/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Tároló-hozzáférés automatikusan 
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Tároló-hozzáférés automatikusan megadva a(z) „%2$S” követőnek itt: „%1$S”.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Tároló-hozzáférés megadva a(z) „%2$S” eredetnek itt: „%1$S”.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Tároló-hozzáférés automatikusan megadva a(z) „%2$S” eredetnek itt: „%1$S”.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Tároló-hozzáférés automatikusan megadva a(z) „%2$S” első féltől származó elkülönítésnek itt: „%1$S”.
 
