--- a/pt-PT/browser/chrome/overrides/appstrings.properties
+++ b/pt-PT/browser/chrome/overrides/appstrings.properties
@@ -25,7 +25,7 @@ proxyConnectFailure=O Firefox está configurado para utilizar um servidor proxy 
 contentEncodingError=A página que está a tentar ver não pode ser mostrada porque utiliza uma forma de compressão inválida ou não suportada.
 unsafeContentType=A página que está a tentar ver não pode ser apresentada porque está contida num tipo de ficheiro cuja a abertura pode não ser segura. Por favor, contacte os proprietários do site para os informar deste problema.
 externalProtocolTitle=Pedido de protocolo externo
-externalProtocolPrompt=É necessário executar uma aplicação externa para manusear ligações %1$S:\n\n\nLigação requerida:\n\n%2$S\n\nAplicação: %3$S\n\n\nSe não estava à espera deste pedido, este pode ser uma tentativa para explorar uma falha de segurança nesse outro programa. Cancele este pedido a menos que tenha a certeza de que não é malicioso.\n
+externalProtocolPrompt=É necessário executar uma aplicação externa para gerir ligações %1$S:\n\n\nLigação solicitada:\n\n%2$S\n\nAplicação: %3$S\n\n\nSe não estava à espera deste pedido, este pode ser uma tentativa para explorar uma fragilidade no outro programa. Cancele este pedido a menos que tenha a certeza que o mesmo não é malicioso.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<Desconhecido>
 externalProtocolChkMsg=Memorizar a minha escolha para todas as ligações deste tipo.
