Pontoon: Update Occitan (oc) localization of Firefox Co-authored-by: Quentí <quentinantonin@free.fr>

--- a/oc/devtools/client/debugger.properties
+++ b/oc/devtools/client/debugger.properties
@@ -692,6 +692,7 @@ inlinePreview.toggle.label=Apercebut de las variables en linha
 
 # LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
 # tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Afichar l’apercebut en linha dins l’editor de desbugatge
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Paramètres de desbugatge
