--- a/oc/devtools/client/netmonitor.properties
+++ b/oc/devtools/client/netmonitor.properties
@@ -874,6 +874,7 @@ netmonitor.actionbar.addBlockedUrl=Apondre un critèri
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingUsageNotice): This is the
 # usage notice displayed when network blocking list is empty
+netmonitor.actionbar.requestBlockingUsageNotice=Ajustatz de modèls d’URL aquí per blocar las requèstas que correspondon.
 
 # LOCALIZATION NOTE (netmonitor.actionbar.requestBlockingAddNotice): This is the
 # add notice that explains ways to add blocking pattern that is displayed when
