--- a/oc/netwerk/necko.properties
+++ b/oc/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=Accès a l'estocatge acordat automati
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Accès a l'estocatge acordat automaticament pel traçador « %2$S » sus « %1$S ».
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Accès d'estocatge acordat per l’origina « %2$S » sus « %1$S ».
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Accès a l'estocatge acordat automaticament per l’origina « %2$S » sus « %1$S ».
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Accès a l'estocatge acordat automaticament per l’isolacion First-Party « %2$S » sus « %1$S ».
 
