Pontoon: Update Spanish (Mexico) (es-MX) localization of Firefox Co-authored-by: Roberto Alvarado <ralv888@gmail.com>

--- a/es-MX/browser/chrome/browser/browser.properties
+++ b/es-MX/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = ¡Fijada!
 confirmationHint.pinTab.description = Haz clic derecho en la pestaña para desfijarla.
 
 confirmationHint.passwordSaved.label = ¡Contraseña guardada!
+confirmationHint.loginRemoved.label = ¡Inicio de sesión eliminado!
 confirmationHint.breakageReport.label = Reporte enviado. ¡Gracias!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
