--- a/es-MX/netwerk/necko.properties
+++ b/es-MX/netwerk/necko.properties
@@ -57,6 +57,10 @@ CookieAllowedForOriginOnTrackerByHeuristic=El acceso al almacenamiento concedido
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=El acceso al almacenamiento concedido automáticamente el rastreador “%2$S” en “%1$S”.
 
+# LOCALIZATION NOTE (CookieAllowedForOriginByStorageAccessAPI): %2$S and %1$S are URLs.
+CookieAllowedForOriginByStorageAccessAPI=Concedido acceso al almacenamiento para el origen “%2$S” en “%1$S”.
+# LOCALIZATION NOTE (CookieAllowedForOriginByHeuristic): %2$S and %1$S are URLs.
+CookieAllowedForOriginByHeuristic=Concedido automáticamente acceso al almacenamiento para el origen “%2$S” en “%1$S”.
 # LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForFpiByHeuristic=Acceso al almacenamiento concedido automáticamente para la aislación de primera fuente “%2$S” en “%1$S”.
 
