--- a/es-MX/dom/chrome/accessibility/mac/accessible.properties
+++ b/es-MX/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       principal
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      alerta
 alertDialog =      alerta de diálogo
+dialog      =      diálogo
 article     =      artículo
 document    =      documento
 # The (spoken) role description for the WAI-ARIA figure role
