--- a/es-MX/dom/chrome/security/security.properties
+++ b/es-MX/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Campos de contraseña presentes en un iframe in
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Cargando contenido activo mixto (inseguro) en un página segura "%1$S"
 LoadingMixedDisplayContent2=Cargando contenido mixto (inseguro) para mostrar en una página segura "%1$S"
+LoadingMixedDisplayObjectSubrequestDeprecation=La carga de contenido mixto (inseguro) “%1$S” dentro de un complemento en una página segura se desaconseja y pronto será bloqueada.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe que tiene tanto allow-scripts como allow-same-origin en su atributo sandbox puede eliminar su condición de confinamiento.
 
