--- a/es-MX/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/es-MX/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Actualizar
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = No actualizar
 updateLoginButtonDeny.accesskey = D
+updateLoginButtonDelete.label = Eliminar inicio de sesión guardado
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
