Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -317,7 +317,7 @@ crashedpluginsMessage.learnMore=更多資訊…
 keywordURIFixup.message=您是不是要去 %S？
 keywordURIFixup.goTo=是，請帶我到 %S
 keywordURIFixup.goTo.accesskey=Y
-keywordURIFixup.dismiss=不要，謝謝
+keywordURIFixup.dismiss=不用，謝謝
 keywordURIFixup.dismiss.accesskey=N
 
 pluginInfo.unknownPlugin=未知
