[S] devtools: Bug 1640532 - devtools: fix some typos in the localization files

--- a/it/devtools/client/webconsole.properties
+++ b/it/devtools/client/webconsole.properties
@@ -133,6 +133,7 @@ webconsole.input.openEditorButton.tooltip2 = Passa all’editor in modalità mul
 webconsole.warningGroup.messageCount.tooltip = #1 messaggio;#1 messaggi
 webconsole.input.editor.onboarding.label = Lavora sul codice più rapidamente con la nuova modalità multilinea dell’editor. Utilizza “%1$S” per aggiungere nuove righe e “%2$S” per eseguire il codice.
 webconsole.input.editor.onboarding.dissmis.label = Ricevuto.
+webconsole.input.editor.onboarding.dismiss.label = Ricevuto.
 webconsole.enterKey = Invio
 webconsole.input.openJavaScriptFile = Apri file JavaScript
 webconsole.input.openJavaScriptFileFilter = File JavaScript
