--- a/sv-SE/devtools/client/debugger.properties
+++ b/sv-SE/devtools/client/debugger.properties
@@ -686,12 +686,11 @@ inlinePreview.show.label=Visa inline-förhandsvisning
 # for hiding the inline preview block
 inlinePreview.hide.label=Dölj inline-förhandsvisning
 
-# LOCALIZATION NOTE (inlinePreview.disable.label): Context menu item
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
 # that will toggle display of inline preview
-inlinePreview.disable.label=Inaktivera inline förhandsvisning
 
-# LOCALIZATION NOTE (inlinePreview.disable.tooltip): Context menu item
-# tooltip that will describe disabling inline preview
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Felsökningsinställningar
@@ -704,13 +703,12 @@ settings.disableJavaScript.label=Inaktivera JavaScript
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=Inaktiverar JavaScript (Kräver uppdatering)
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.tooltip): Context menu item
-# tooltip for disabling source maps
-settings.disableSourceMaps.tooltip=Inaktivera klient källmappning
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
 
-# LOCALIZATION NOTE (settings.disableSourceMaps.label): Context menu item
-# label for disabling source maps
-settings.disableSourceMaps.label=Inaktivera källmappning
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+settings.toggleSourceMaps.label=Källkartor
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
