Pontoon: Update Chinese (Taiwan) (zh-TW) localization of SeaMonkey Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/suite/chrome/browser/tabbrowser.properties
+++ b/zh-TW/suite/chrome/browser/tabbrowser.properties
@@ -11,7 +11,7 @@ tabs.closeWarning=您正要關閉 %S 個其他分頁。您確定要繼續嗎？
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The singular form is not considered since this string is used only for
 # multiple tabs.
-tabs.closeWarningOther=您即將關閉 #1 個分頁，確定要繼續嗎？
+tabs.closeWarningOther=即將關閉 #1 個分頁，確定要繼續嗎？
 tabs.closeButton=關閉其他分頁
 tabs.closeWarningPromptMe=在我嘗試關閉其他分頁時警告我
 
