--- a/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -6,11 +6,14 @@
 # The following are used by the Mailing list dialog
 #
 
-## LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name
+# The following are used by the Mailing list dialog.
+# LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name.
 mailingListTitleEdit=Redigera %S
 emptyListName=Du måste ge sändlistan ett namn.
 lastFirstFormat=%S, %S
 firstLastFormat=%S %S  
+
+allAddressBooks=Alla adressböcker
 
 newContactTitle=Ny kontakt
 # %S will be the card's display name
@@ -44,6 +47,78 @@ confirmDeleteMailingList=Är du säker på att du vill ta bort markerad sändlis
 confirmDeleteListsAndContacts=Är du säker på att du vill ta bort de markerade kontakterna och sändlistorna?
 confirmDeleteMailingLists=Är du säker på att du vill ta bort den markerade sändlistan?
 
+confirmDeleteThisContactTitle=Ta bort kontakt
+# LOCALIZATION NOTE (confirmDeleteThisContact):
+# #1 The name of the selected contact
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this contact?
+#          • John Doe
+
+confirmDelete2orMoreContactsTitle=Ta bort flera kontakter
+# LOCALIZATION NOTE (confirmDelete2orMoreContacts):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# Example: Are you sure you want to delete these 3 contacts?
+
+confirmRemoveThisContactTitle=Ta bort kontakt
+# LOCALIZATION NOTE (confirmRemoveThisContact):
+# #1 The name of the selected contact
+# #2 The name of the containing mailing list
+# This title is about a contact in a mailing list, so it will not be deleted,
+# but only removed from the list.
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to remove this contact from the mailing list 'Customers List'?
+#          • John Doe
+
+confirmRemove2orMoreContactsTitle=Ta bort flera kontakter
+# LOCALIZATION NOTE (confirmRemove2orMoreContacts):
+# Semicolon list of singular and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# #2 The name of the containing mailing list
+# Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+
+# LOCALIZATION NOTE (confirmDeleteThisMailingList):
+# #1 The name of the selected mailing list
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this mailing list?
+#          • Customers List
+
+# LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 mailing lists?
+
+# LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
+# Semicolon list of and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts and mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 contacts and mailing lists?
+
+confirmDeleteThisAddressbookTitle=Ta bort adressbok
+# LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
+# #1 The name of the selected address book
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this address book and all of its contacts?
+#          • Friends and Family Address Book
+
+confirmDeleteThisLDAPDirTitle=Ta bort lokal LDAP-katalog
+# LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
+# #1 The name of the selected LDAP directory
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
+#          • Mozilla LDAP Directory
+
+# LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
+# #1 The name of the selected collection address book
+# #2 The name of the application (Thunderbird)
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: If this address book is deleted, Thunderbird will no longer collect addresses.
+#          Are you sure you want to delete this address book and all of its contacts?
+#          • My Collecting Addressbook
+
 propertyPrimaryEmail=E-post
 propertyListName=Listnamn
 propertySecondaryEmail=Ytterligare e-post
@@ -60,6 +135,16 @@ propertyCustom1=Övrigt 1
 propertyCustom2=Övrigt 2
 propertyCustom3=Övrigt 3
 propertyCustom4=Övrigt 4
+
+propertyGtalk=Google Talk
+propertyAIM=AIM
+propertyYahoo=Yahoo!
+propertySkype=Skype
+propertyQQ=QQ
+propertyMSN=MSN
+propertyICQ=ICQ
+propertyXMPP=Jabber ID
+propertyIRC=IRC Smeknamn
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -91,7 +176,7 @@ ldap_2.servers.oe.description=OE-kontakter
 ldap_2.servers.osx.description=Adressbok för Mac OS X
 
 # status bar stuff
-## LOCALIZATION NOTE (totalCardStatus): 
+## LOCALIZATION NOTE (totalContactStatus): 
 ## %1$S is address book name, %2$S is card count
 totalContactStatus=Totala antalet kontakter i %1$S: %2$S
 noMatchFound=Inga matchningar hittades
@@ -111,7 +196,7 @@ contactsCopied=%1$S kontakt kopierad;%1$S kontakter kopierade
 ## times wherever you need it. Do not replace by %S.
 contactsMoved=%1$S kontakt flyttad;%1$S kontakter flyttade
 
-#LDAP directory stuff
+# LDAP directory stuff
 invalidName=Skriv in ett giltigt namn.
 invalidHostname=Skriv in ett giltigt servernamn.
 invalidPortNumber=Skriv in ett giltigt portnummer.
@@ -119,7 +204,7 @@ invalidResults=Skriv in ett giltigt nummer i resultatfältet.
 abReplicationOfflineWarning=Du måste vara uppkopplad för att göra en LDAP-avbildning.
 abReplicationSaveSettings=Inställningarna måste sparas innan en katalog kan hämtas.
 
-#For importing / exporting
+# For importing / exporting
 ## LOCALIZATION NOTE (ExportAddressBookNameTitle): %S is the name of exported addressbook
 ExportAddressBookNameTitle=Exportera adressbok: %S
 LDIFFiles=LDIF (*.ldi,*.ldif)
@@ -134,7 +219,7 @@ failedToExportTitle=Exporten misslyckades
 failedToExportMessageNoDeviceSpace=Det gick inte att exportera adressboken, p.g.a. för lite ledigt utrymme.
 failedToExportMessageFileAccessDenied=Det gick inte att exportera adressboken, för att filåtkomst nekas.
 
-#For getting authDN for replication using dlg box
+# For getting authDN for replication using dlg box
 AuthDlgTitle=Avbildning av adressbok via LDAP
 AuthDlgDesc=Du måste ange användarnamn och lösenord för att komma åt katalogservern.
 
@@ -146,14 +231,15 @@ joinMeInThisChat=Jag+bjuder+in+dig+i+chatten.
 headingHome=Hem
 headingWork=Arbete
 headingOther=Övrigt
+headingChat=Chatt
 headingPhone=Telefon
 headingDescription=Beskrivning
 headingAddresses=Adresser
 
-# For address books
+## For address books
 addressBookTitleNew=Ny adressbok
-## LOCALIZATION NOTE (addressBookTitleEdit): 
-# %S will be replaced by the the Address Book's name
+# LOCALIZATION NOTE (addressBookTitleEdit):
+# %S is the current name of the address book.
 # Example: My Custom AB Properties
 addressBookTitleEdit=Egenskaper för %S
 duplicateNameTitle=Dubblett av adressboksnamn
@@ -164,7 +250,6 @@ duplicateNameTitle=Dubblett av adressboksnamn
 #          • My Custom AB
 duplicateNameText=En adressbok med detta namn finns redan:\n• %S
 
-
 # For corrupt .mab files
 corruptMabFileTitle=Korrupt adressboksfil
 corruptMabFileAlert=En av dina adressboksfiler (%1$S fil) kunde inte läsas. En ny %2$S fil kommer att skapas och en säkerhetskopia av den gamla filen, kallad %3$S, kommer att skapas i samma mapp.
@@ -172,4 +257,3 @@ corruptMabFileAlert=En av dina adressboksfiler (%1$S fil) kunde inte läsas. En 
 # For locked .mab files
 lockedMabFileTitle=Kunde inte hämta adressboksfil
 lockedMabFileAlert=Kunde inte hämta adressboksfilen %S. Den kanske är skrivskyddad eller låst av ett annat program. Försök igen senare.
-
