Pontoon: Update Chinese (Taiwan) (zh-TW) localization of Firefox Co-authored-by: Pin-guang Chen <petercpg@mail.moztw.org>

--- a/zh-TW/browser/chrome/browser/browser.properties
+++ b/zh-TW/browser/chrome/browser/browser.properties
@@ -671,7 +671,7 @@ trackingProtection.icon.activeTooltip=已封鎖追蹤行為
 trackingProtection.icon.disabledTooltip=偵測到追蹤內容
 
 trackingProtection.icon.activeTooltip2=封鎖社交媒體追蹤器、跨網站追蹤 Cookie 及數位指紋追蹤程式。
-trackingProtection.icon.disabledTooltip2=已關閉針對此網站的加強型追蹤保護功能
+trackingProtection.icon.disabledTooltip2=已關閉針對此網站的加強型追蹤保護功能。
 # LOCALIZATION NOTE (trackingProtection.icon.noTrackersDetectedTooltip): %S is brandShortName.
 trackingProtection.icon.noTrackersDetectedTooltip=%S 未在此頁面偵測到已知的追蹤元素。
 
