--- a/zh-TW/browser/chrome/browser/places/bookmarkProperties.properties
+++ b/zh-TW/browser/chrome/browser/places/bookmarkProperties.properties
@@ -8,7 +8,7 @@ dialogAcceptLabelAddMulti=新增書籤
 dialogAcceptLabelEdit=儲存
 dialogTitleAddBookmark=新增書籤
 dialogTitleAddFolder=新增資料夾
-dialogTitleAddMulti=新增多個書籤
+dialogTitleAddMulti=新增書籤
 dialogTitleEdit=「%S」屬性
 
 bookmarkAllTabsDefault=[資料夾名稱]
