--- a/zh-TW/devtools/client/aboutdebugging.properties
+++ b/zh-TW/devtools/client/aboutdebugging.properties
@@ -145,7 +145,7 @@ location = 位置
 # This string is displayed as a header of the about:debugging#workers page.
 workers = Workers
 
-serviceWorkers = Service Workers
+serviceWorkers = Service Worker
 sharedWorkers = 共享 Workers
 otherWorkers = 其他 Workers
 
