--- a/zh-TW/devtools/client/debugger.properties
+++ b/zh-TW/devtools/client/debugger.properties
@@ -554,7 +554,7 @@ callStack.collapse=摺疊列
 
 # LOCALIZATION NOTE (callStack.expand): Call Stack right sidebar pane
 # message to show more of the frames.
-callStack.expand=摺疊列
+callStack.expand=展開列
 
 # LOCALIZATION NOTE (callStack.group.expandTooltip): The text that will appear
 # when hovering a collapsed Group of frames in the callStack panel. `frames` is
