--- a/zh-TW/devtools/client/markers.properties
+++ b/zh-TW/devtools/client/markers.properties
@@ -31,7 +31,7 @@ marker.label.garbageCollection.nonIncremental=非漸增資源回收
 marker.label.minorGC=Minor GC
 marker.label.cycleCollection=循環收集
 marker.label.cycleCollection.forgetSkippable=減少循環圖
-marker.label.timestamp=Timestamp
+marker.label.timestamp=時間戳記
 marker.label.worker=Worker
 marker.label.messagePort=MessagePort
 marker.label.unknown=未知
