--- a/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
+++ b/zh-TW/security/manager/chrome/pipnss/nsserrors.properties
@@ -148,7 +148,7 @@ SEC_ERROR_INVALID_ALGORITHM=安全函式庫: 無效的演算法。
 SEC_ERROR_INVALID_AVA=安全函式庫: 無效的 AVA。
 SEC_ERROR_INVALID_TIME=不正確的時間字串格式。
 SEC_ERROR_BAD_DER=安全函式庫: 不正確的 DER 編碼訊息格式。
-SEC_ERROR_BAD_SIGNATURE=節點的憑證有無效的簽章。
+SEC_ERROR_BAD_SIGNATURE=節點的憑證簽章無效。
 SEC_ERROR_EXPIRED_CERTIFICATE=節點的憑證已過期。
 SEC_ERROR_REVOKED_CERTIFICATE=節點的憑證已廢止。
 SEC_ERROR_UNKNOWN_ISSUER=無法辨認節點的憑證簽發者。
@@ -170,7 +170,7 @@ SEC_ERROR_CERT_NOT_VALID=此憑證無效。
 SEC_ERROR_CERT_NO_RESPONSE=憑證函式庫: 無回應
 SEC_ERROR_EXPIRED_ISSUER_CERTIFICATE=憑證簽發者的憑證已過期，請檢查您的系統日期及時間。
 SEC_ERROR_CRL_EXPIRED=憑證簽發者的已過期，請更新廢止清冊或檢查您的系統日期及時間。
-SEC_ERROR_CRL_BAD_SIGNATURE=憑證簽發者的廢止清冊含無效的簽章。
+SEC_ERROR_CRL_BAD_SIGNATURE=憑證簽發者的廢止清冊簽章無效。
 SEC_ERROR_CRL_INVALID=新憑證廢止清冊的格式無效。
 SEC_ERROR_EXTENSION_VALUE_INVALID=憑證擴充欄位的值無效。
 SEC_ERROR_EXTENSION_NOT_FOUND=找不到憑證的擴充欄位。
