--- a/zh-TW/devtools/client/memory.properties
+++ b/zh-TW/devtools/client/memory.properties
@@ -96,7 +96,7 @@ censusDisplays.internalType.tooltip=依照物件的 C++ 內部類型分組
 # options of the label options.
 toolbar.labelBy=標籤依照:
 
-# LOCALIZATION NOTE (toolbar.labelBy): The tooltip for the label describing the
+# LOCALIZATION NOTE (toolbar.labelBy.tooltip): The tooltip for the label describing the
 # select menu options of the label options.
 toolbar.labelBy.tooltip=調整物件的標籤方式
 
@@ -106,7 +106,7 @@ dominatorTreeDisplays.coarseType.tooltip=依照符合的大分類標示物件
 
 # LOCALIZATION NOTE (dominatorTreeDisplays.allocationStack.tooltip): The
 # tooltip for the "call stack" dominator tree display option.
-dominatorTreeDisplays.allocationStack.tooltip=依照物件分配時記錄到的 JavaScript 堆疊分組
+dominatorTreeDisplays.allocationStack.tooltip=依照物件分配時記錄到的 JavaScript 堆疊標示
 
 # LOCALIZATION NOTE (dominatorTreeDisplays.internalType.tooltip): The
 # tooltip for the "internal type" dominator tree display option.
@@ -250,7 +250,7 @@ diffing.state.selecting.full=選擇兩個快照進行比較
 # dominator tree state COMPUTING.
 dominatorTree.state.computing=正在產生 dominators 報告…
 
-# LOCALIZATION NOTE (dominatorTree.state.computing): The label describing the
+# LOCALIZATION NOTE (dominatorTree.state.computing.full): The label describing the
 # dominator tree state COMPUTING, used in the dominator tree view.
 dominatorTree.state.computing.full=正在產生 dominators 報告…
 
@@ -258,7 +258,7 @@ dominatorTree.state.computing.full=正在產生 dominators 報告…
 # dominator tree state FETCHING.
 dominatorTree.state.fetching=正在計算大小…
 
-# LOCALIZATION NOTE (dominatorTree.state.fetching): The label describing the
+# LOCALIZATION NOTE (dominatorTree.state.fetching.full): The label describing the
 # dominator tree state FETCHING, used in the dominator tree view.
 dominatorTree.state.fetching.full=正在計算保留大小…
 
@@ -266,7 +266,7 @@ dominatorTree.state.fetching.full=正在計算保留大小…
 # describing the dominator tree state INCREMENTAL_FETCHING.
 dominatorTree.state.incrementalFetching=正在取回…
 
-# LOCALIZATION NOTE (dominatorTree.state.incrementalFetching): The label describing the
+# LOCALIZATION NOTE (dominatorTree.state.incrementalFetching.full): The label describing the
 # dominator tree state INCREMENTAL_FETCHING, used in the dominator tree view.
 dominatorTree.state.incrementalFetching.full=正在取回 subtree…
 
@@ -274,7 +274,7 @@ dominatorTree.state.incrementalFetching.full=正在取回 subtree…
 # dominator tree state ERROR.
 dominatorTree.state.error=錯誤
 
-# LOCALIZATION NOTE (dominatorTree.state.error): The label describing the
+# LOCALIZATION NOTE (dominatorTree.state.error.full): The label describing the
 # dominator tree state ERROR, used in the dominator tree view.
 dominatorTree.state.error.full=處理 dominator tree 時發生錯誤
 
