Pontoon: Update Norwegian Bokmål (nb-NO) localization of Firefox Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/browser/chrome/browser/webrtcIndicator.properties
+++ b/nb-NO/browser/chrome/browser/webrtcIndicator.properties
@@ -9,13 +9,13 @@
 # titles. It is not normally visible anywhere.
 webrtcIndicator.windowtitle = %S - Delingsindikator
 
-webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamera og mikrofon deles nå. Trykk for å velge deling.
-webrtcIndicator.sharingCamera.tooltip              = Kamera deles nå. Trykk for å velge deling.
-webrtcIndicator.sharingMicrophone.tooltip          = Mikrofon deles nå. Trykk for å velge deling.
-webrtcIndicator.sharingApplication.tooltip = Et program deles. Trykk for å velge deling.
-webrtcIndicator.sharingScreen.tooltip = Skjermen din deles nå. Trykk for å velge deling.
-webrtcIndicator.sharingWindow.tooltip = Et vindu deles nå. Trykk for å velge deling.
-webrtcIndicator.sharingBrowser.tooltip = En fane deles nå. Trykk for å velge deling.
+webrtcIndicator.sharingCameraAndMicrophone.tooltip = Kamera og mikrofon deles nå. Trykk for å kontrollere deling.
+webrtcIndicator.sharingCamera.tooltip              = Kamera deles nå. Trykk for å kontrollere deling.
+webrtcIndicator.sharingMicrophone.tooltip          = Mikrofon deles nå. Trykk for å kontrollere deling.
+webrtcIndicator.sharingApplication.tooltip = Et program deles. Trykk for å kontrollere deling.
+webrtcIndicator.sharingScreen.tooltip = Skjermen din deles nå. Trykk for å kontrollere deling.
+webrtcIndicator.sharingWindow.tooltip = Et vindu deles nå. Trykk for å kontrollere deling.
+webrtcIndicator.sharingBrowser.tooltip = En fane deles nå. Trykk for å kontrollere deling.
 
 
 # LOCALIZATION NOTE : The following strings are only used on Mac for
