--- a/sl/devtools/client/webconsole.properties
+++ b/sl/devtools/client/webconsole.properties
@@ -566,6 +566,10 @@ webconsole.input.editor.onboarding.label=Hitreje pišite z novim načinom urejan
 # displayed in the multiline-input mode onboarding UI to dismiss it.
 webconsole.input.editor.onboarding.dissmis.label=Razumem!
 
+# LOCALIZATION NOTE (webconsole.input.editor.onboarding.dismiss.label): the text that is
+# displayed in the multiline-input mode onboarding UI to dismiss it.
+webconsole.input.editor.onboarding.dismiss.label=Razumem!
+
 # LOCALIZATION NOTE (webconsole.enterKey): The text that will be used to represent the
 # Enter key in the editor onboarding UI, as well as on the Editor toolbar "Run" button
 # tooltip.
