--- a/zh-TW/suite/chrome/mailnews/messenger.properties
+++ b/zh-TW/suite/chrome/mailnews/messenger.properties
@@ -18,7 +18,7 @@ newFolderMenuItem=資料夾…
 newSubfolderMenuItem=子資料夾…
 newFolder=新增資料夾…
 newSubfolder=新增子資料夾…
-folderProperties=資料夾屬性…
+folderProperties=資料夾屬性
 getMessages=下載郵件
 getMessagesFor=取得下列帳號當中的訊息
 # LOCALIZATION NOTE (getNextNewsMessages): Semi-colon list of plural forms.
