--- a/zh-TW/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/zh-TW/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -6,7 +6,7 @@
 title=開啟中: %S
 saveDialogTitle=輸入要儲存的檔名…
 defaultApp=%S（預設）
-chooseAppFilePickerTitle=選擇應用程式
+chooseAppFilePickerTitle=選擇輔助應用程式
 badApp=找不到應用程式「%S」。請選取其它程式。
 badApp.title=找不到應用程式
 badPermissions=檔案無法儲存，因為您並無適當的權限。請選擇另一個儲存目錄。
