--- a/hu/devtools/client/webconsole.properties
+++ b/hu/devtools/client/webconsole.properties
@@ -570,6 +570,10 @@ webconsole.input.editor.onboarding.label=Lépkedjen gyorsabban a kódban az új 
 # displayed in the multiline-input mode onboarding UI to dismiss it.
 webconsole.input.editor.onboarding.dissmis.label=Megértettem!
 
+# LOCALIZATION NOTE (webconsole.input.editor.onboarding.dismiss.label): the text that is
+# displayed in the multiline-input mode onboarding UI to dismiss it.
+webconsole.input.editor.onboarding.dismiss.label=Megértettem!
+
 # LOCALIZATION NOTE (webconsole.enterKey): The text that will be used to represent the
 # Enter key in the editor onboarding UI, as well as on the Editor toolbar "Run" button
 # tooltip.
