--- a/hu/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/hu/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -6,11 +6,14 @@
 # The following are used by the Mailing list dialog
 #
 
-## LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name
+# The following are used by the Mailing list dialog.
+# LOCALIZATION NOTE (mailingListTitleEdit): %S will be replaced by the Mailing List's display name.
 mailingListTitleEdit=%S szerkesztése
 emptyListName=Be kell írnia egy lista nevét.
 lastFirstFormat=%S, %S
 firstLastFormat=%S %S
+
+allAddressBooks=Minden címjegyzék
 
 newContactTitle=Új névjegy
 # %S will be the card's display name
@@ -44,6 +47,92 @@ confirmDeleteMailingList=Biztos benne, hogy törölni akarja a kijelölt levelez
 confirmDeleteListsAndContacts=Are you sure you want to delete the selected contacts and mailing lists?
 confirmDeleteMailingLists=Biztos benne, hogy törölni akarja a kijelölt levelezőlistákat?
 
+confirmDeleteThisContactTitle=Névjegy törlése
+# LOCALIZATION NOTE (confirmDeleteThisContact):
+# #1 The name of the selected contact
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this contact?
+#          • John Doe
+confirmDeleteThisContact=Biztos, hogy törli ezt a névjegyet?\n• #1
+
+confirmDelete2orMoreContactsTitle=Több névjegy törlése
+# LOCALIZATION NOTE (confirmDelete2orMoreContacts):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# Example: Are you sure you want to delete these 3 contacts?
+confirmDelete2orMoreContacts=Biztos, hogy törli ezt az #1 névjegyet?;Biztos, hogy törli ezt a(z) #1 névjegyet?
+
+confirmRemoveThisContactTitle=Névjegy eltávolítása
+# LOCALIZATION NOTE (confirmRemoveThisContact):
+# #1 The name of the selected contact
+# #2 The name of the containing mailing list
+# This title is about a contact in a mailing list, so it will not be deleted,
+# but only removed from the list.
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to remove this contact from the mailing list 'Customers List'?
+#          • John Doe
+confirmRemoveThisContact=Biztos, hogy eltávolítja ezt a névjegyet a(z) „#2” levelezőlistából?\n• #1
+
+confirmRemove2orMoreContactsTitle=Több névjegy törlése
+# LOCALIZATION NOTE (confirmRemove2orMoreContacts):
+# Semicolon list of singular and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts, always more than 1.
+# #2 The name of the containing mailing list
+# Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+confirmRemove2orMoreContacts=Biztos, hogy eltávolítja ezt az #1 névjegyet a(z) „#2” levelezőlistából?;Biztos, hogy eltávolítja ezt a(z) #1 névjegyet a(z) „#2” levelezőlistából?
+
+confirmDeleteThisMailingListTitle=Levelezőlista törlése
+# LOCALIZATION NOTE (confirmDeleteThisMailingList):
+# #1 The name of the selected mailing list
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this mailing list?
+#          • Customers List
+confirmDeleteThisMailingList=Biztos, hogy törli ezt a levelezőlistát?\n• #1
+
+confirmDelete2orMoreMailingListsTitle=Több levelezőlista törlése
+# LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
+# Semicolon list of plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 mailing lists?
+confirmDelete2orMoreMailingLists=Biztos, hogy törli ezt az #1 levelezőlistát?;Biztos, hogy törli ezt a(z) #1 levelezőlistát?
+
+confirmDelete2orMoreContactsAndListsTitle=Névjegyek és levelezőlisták törlése
+# LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
+# Semicolon list of and plural forms.
+# See: http://developer.mozilla.org/docs/Localization_and_Plurals
+# #1 The number of selected contacts and mailing lists, always more than 1
+# Example: Are you sure you want to delete these 3 contacts and mailing lists?
+confirmDelete2orMoreContactsAndLists=Biztos, hogy törli ezt az #1 névjegyet és levelezőlistát?;Biztos, hogy törli ezt a(z) #1 névjegyet és levelezőlistát?
+
+confirmDeleteThisAddressbookTitle=Címjegyzék törlése
+# LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
+# #1 The name of the selected address book
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete this address book and all of its contacts?
+#          • Friends and Family Address Book
+confirmDeleteThisAddressbook=Biztos, hogy törli ezt a címjegyzéket és az összes névjegyet?\n• #1
+
+confirmDeleteThisLDAPDirTitle=Helyi LDAP-címtár törlése
+# LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
+# #1 The name of the selected LDAP directory
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
+#          • Mozilla LDAP Directory
+confirmDeleteThisLDAPDir=Biztos, hogy törli ezt az LDAP-címtármásolatot és az összes offline névjegyet?\n• #1
+
+confirmDeleteThisCollectionAddressbookTitle=Gyűjtemény címjegyzékének törlése
+# LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
+# #1 The name of the selected collection address book
+# #2 The name of the application (Thunderbird)
+# Don't localize "\n• #1" unless your local layout comes out wrong.
+# Example: If this address book is deleted, Thunderbird will no longer collect addresses.
+#          Are you sure you want to delete this address book and all of its contacts?
+#          • My Collecting Addressbook
+confirmDeleteThisCollectionAddressbook=Ha törli a címjegyzéket, a #2 nem gyűjti tovább a címeket.\nBiztos, hogy törli a kijelölt címjegyzéket és az összes névjegyet?\n• #1
+
 propertyPrimaryEmail=E-mail
 propertyListName=Listanév
 propertySecondaryEmail=További e-mail
@@ -60,6 +149,16 @@ propertyCustom1=Egyéni 1
 propertyCustom2=Egyéni 2
 propertyCustom3=Egyéni 3
 propertyCustom4=Egyéni 4
+
+propertyGtalk=Google Talk
+propertyAIM=AIM
+propertyYahoo=Yahoo!
+propertySkype=Skype
+propertyQQ=QQ
+propertyMSN=MSN
+propertyICQ=ICQ
+propertyXMPP=Jabber-azonosító
+propertyIRC=IRC becenév
 
 ## LOCALIZATION NOTE (cityAndStateAndZip): 
 ## %1$S is city, %2$S is state, %3$S is zip
@@ -146,6 +245,7 @@ joinMeInThisChat=Csevegj+velem!
 headingHome=Otthon
 headingWork=Munka
 headingOther=Egyéb
+headingChat=Csevegés
 headingPhone=Telefon
 headingDescription=Leírás
 headingAddresses=Címek
