Pontoon: Update Swedish (sv-SE) localization of SeaMonkey Co-authored-by: Luna Jernberg <bittin@cafe8bitar.se>

--- a/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -79,6 +79,7 @@ confirmRemove2orMoreContactsTitle=Ta bort flera kontakter
 # #2 The name of the containing mailing list
 # Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
 
+confirmDeleteThisMailingListTitle=Ta bort sändlista
 # LOCALIZATION NOTE (confirmDeleteThisMailingList):
 # #1 The name of the selected mailing list
 # Don't localize "\n• #1" unless your local layout comes out wrong.
