Pontoon: Update Norwegian Bokmål (nb-NO) localization of SeaMonkey Co-authored-by: Håvar Henriksen <havar@firefox.no>

--- a/nb-NO/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/nb-NO/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -245,6 +245,7 @@ joinMeInThisChat=Bli+med+meg+i+denne+praten
 headingHome=Hjem
 headingWork=Arbeid
 headingOther=Annen
+headingChat=Nettprat
 headingPhone=Telefon
 headingDescription=Beskrivelse
 headingAddresses=Adresser
