--- a/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -53,6 +53,7 @@ confirmDeleteThisContactTitle=Ta bort kontakt
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete this contact?
 #          • John Doe
+confirmDeleteThisContact=Är du säker på att du vill ta bort den här kontakten? \n• #1
 
 confirmDelete2orMoreContactsTitle=Ta bort flera kontakter
 # LOCALIZATION NOTE (confirmDelete2orMoreContacts):
@@ -60,6 +61,7 @@ confirmDelete2orMoreContactsTitle=Ta bort flera kontakter
 # See: http://developer.mozilla.org/docs/Localization_and_Plurals
 # #1 The number of selected contacts, always more than 1.
 # Example: Are you sure you want to delete these 3 contacts?
+confirmDelete2orMoreContacts=Är du säker på att du vill ta bort denna #1 kontakt?;Är du säker på att du vill ta bort dessa #1 kontakter?
 
 confirmRemoveThisContactTitle=Ta bort kontakt
 # LOCALIZATION NOTE (confirmRemoveThisContact):
@@ -104,6 +106,7 @@ confirmDeleteThisAddressbookTitle=Ta bort adressbok
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete this address book and all of its contacts?
 #          • Friends and Family Address Book
+confirmDeleteThisAddressbook=Är du säker på att du vill ta bort denna adressbok och alla dess kontakter?\n• #1
 
 confirmDeleteThisLDAPDirTitle=Ta bort lokal LDAP-katalog
 # LOCALIZATION NOTE (confirmDeleteThisLDAPDir):
@@ -112,6 +115,7 @@ confirmDeleteThisLDAPDirTitle=Ta bort lokal LDAP-katalog
 # Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
 #          • Mozilla LDAP Directory
 
+confirmDeleteThisCollectionAddressbookTitle=Ta bort samlad adressbok
 # LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
 # #1 The name of the selected collection address book
 # #2 The name of the application (Thunderbird)
