--- a/eu/devtools/client/debugger.properties
+++ b/eu/devtools/client/debugger.properties
@@ -686,6 +686,14 @@ inlinePreview.show.label=Erakutsi barneko aurrebista
 # for hiding the inline preview block
 inlinePreview.hide.label=Ezkutatu barneko aurrebista
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+inlinePreview.toggle.label=Aldagaien barneko aurrebista
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+inlinePreview.toggle.tooltip=Erakutsi barneko aurrebista araztailearen editorean
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=Araztailearen ezarpenak
 
@@ -696,6 +704,12 @@ settings.disableJavaScript.label=Desgaitu JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=JavaScript desgaitzen du (berritu egin behar da)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
