Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/toolkit/chrome/global/aboutReader.properties
+++ b/ko/toolkit/chrome/global/aboutReader.properties
@@ -55,8 +55,8 @@ readerView.close=리더뷰 닫기
 readerView.close.accesskey=R
 
 # These are used as tooltips in Type Control
-aboutReader.toolbar.minus = 글자 크기 줄이기
-aboutReader.toolbar.plus = 글자 크기 늘리기
+aboutReader.toolbar.minus = 글꼴 크기 줄이기
+aboutReader.toolbar.plus = 글꼴 크기 늘리기
 aboutReader.toolbar.contentwidthminus = 콘텐츠 너비 줄이기
 aboutReader.toolbar.contentwidthplus = 콘텐츠 너비 늘리기
 aboutReader.toolbar.lineheightminus = 줄 간격 줄이기
