Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/shared/styleinspector.properties
+++ b/ko/devtools/shared/styleinspector.properties
@@ -107,11 +107,11 @@ rule.angleSwatch.tooltip=Shift+클릭해서 각도 형식 변경
 
 # LOCALIZATION NOTE (rule.flexToggle.tooltip): Text displayed in a tooltip
 # when the mouse is over a Flexbox toggle icon in the rule view.
-rule.flexToggle.tooltip=Flexbox 하이라이터를 토글하려면 클릭
+rule.flexToggle.tooltip=플렉스박스 하이라이터를 토글하려면 클릭
 
 # LOCALIZATION NOTE (rule.gridToggle.tooltip): Text displayed in a tooltip
 # when the mouse is over a CSS Grid toggle icon in the rule view.
-rule.gridToggle.tooltip=클릭해서 CSS 그리드 표시를 토글
+rule.gridToggle.tooltip=클릭해서 CSS 그리드 하이라이터를 토글
 
 # LOCALIZATION NOTE (rule.filterStyles.placeholder): This is the placeholder that
 # goes in the search box when no search term has been entered.
