--- a/it/devtools/client/netmonitor.properties
+++ b/it/devtools/client/netmonitor.properties
@@ -265,7 +265,7 @@ netmonitor.summary.version = Versione:
 netmonitor.headers.version = Versione
 netmonitor.summary.learnMore = Ulteriori informazioni sui codici di stato
 netmonitor.summary.referrerPolicy = Referrer Policy:
-netmonitor.headers.referrer = Referrer
+netmonitor.headers.referrerPolicy = Referrer Policy
 netmonitor.headers.contentBlocking = Bloccato
 netmonitor.summary.editAndResend = Modifica e reinvia
 netmonitor.summary.rawHeaders = Header non elaborati (raw)
