[S] browser: Bug 1633505 - Show refresh button within the uninstaller

--- a/it/browser/installer/custom.properties
+++ b/it/browser/installer/custom.properties
@@ -29,6 +29,7 @@ ICONS_STARTMENU = Nella cartella Programmi del menu &Start
 ICONS_QUICKLAUNCH = Nella &barra di Avvio veloce
 WARN_MANUALLY_CLOSE_APP_INSTALL = $BrandShortName deve essere chiuso per poter procedere con l’installazione.\n\nChiudere $BrandShortName per proseguire.
 WARN_MANUALLY_CLOSE_APP_UNINSTALL = $BrandShortName deve essere chiuso per poter procedere con la disinstallazione.\n\nChiudere $BrandShortName per proseguire.
+WARN_MANUALLY_CLOSE_APP_REFRESH = $BrandShortName deve essere chiuso per poter procedere con il ripristino.\n\nChiudere $BrandShortName per proseguire.
 WARN_MANUALLY_CLOSE_APP_LAUNCH = $BrandShortName risulta già in esecuzione.\n\nChiudere $BrandShortName prima di avviare la versione appena installata.
 WARN_WRITE_ACCESS = Non si ha accesso in scrittura alla cartella di installazione.\n\nFare clic su OK per selezionare un’altra cartella.
 WARN_DISK_SPACE = Non è disponibile spazio sufficiente sul disco per l’installazione in questo percorso.\n\nFare clic su OK per selezionare un’altra posizione.
@@ -43,6 +44,10 @@ UN_CONFIRM_PAGE_TITLE = Disinstallazione di $BrandFullName
 UN_CONFIRM_PAGE_SUBTITLE = Rimuove $BrandFullName dal computer.
 UN_CONFIRM_UNINSTALLED_FROM = $BrandShortName verrà disinstallato dal seguente percorso:
 UN_CONFIRM_CLICK = Fare clic su Disinstalla per proseguire.
+UN_REFRESH_PAGE_TITLE = Perché non provare a ripristinare $BrandShortName?
+UN_REFRESH_PAGE_EXPLANATION = Se stai riscontrando problemi con $BrandShortName, un ripristino potrebbe aiutare.\n\nQuesta operazione ripristina le impostazioni predefinite e rimuove i componenti aggiuntivi installati. Riparti da zero per ottenere prestazioni ottimali.
+UN_REFRESH_LEARN_MORE = &Ulteriori informazioni
+UN_REFRESH_BUTTON = &Ripristina $BrandShortName
 BANNER_CHECK_EXISTING = Verifica dell’installazione esistente…
 STATUS_INSTALL_APP = Installazione di $BrandShortName…
 STATUS_INSTALL_LANG = Installazione della localizzazione (${AB_CD})…
