Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/browser/chrome/browser/tabbrowser.properties
+++ b/fy-NL/browser/chrome/browser/tabbrowser.properties
@@ -38,7 +38,6 @@ tabs.closeWarningPromptMe=Warskôgje my as ik probearje mear ljepblêden te slut
 # of tabs in these windows.
 # Note that every one of these plural forms must contain one instance of '%S'.
 tabs.closeWarningMultipleWindows=;Jo steane op it punt om #1 finsters %S te sluten. Binne jo wis dat jo trochgean wolle?
-
 # LOCALIZATION NOTE (tabs.closeWarningMultipleWindowsSessionRestore2):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -129,5 +128,5 @@ tabs.containers.tooltip=%1$S - %2$S
 # Now they are not specific to bookmark.
 tabs.openWarningTitle=Iepenjen befêstigje
 tabs.openWarningMultipleBranded=Jo stean op it punt om %S ljepblêden te iepenjen. Dit kin %S fertrage wylst it laden fan de siden. Binne jo wis dat jo trochgean wolle?
-tabs.openButtonMultiple=Iepen ljeplêden
+tabs.openButtonMultiple=Ljepblêden iepenje
 tabs.openWarningPromptMeBranded=My warskôgje as it iepenjen fan mear ljepblêden %S fertraagje kinne soe
