Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/devtools/client/webconsole.properties
+++ b/fy-NL/devtools/client/webconsole.properties
@@ -570,6 +570,10 @@ webconsole.input.editor.onboarding.label=Fier jo koade flugger út mei de nije m
 # displayed in the multiline-input mode onboarding UI to dismiss it.
 webconsole.input.editor.onboarding.dissmis.label=Begrepen!
 
+# LOCALIZATION NOTE (webconsole.input.editor.onboarding.dismiss.label): the text that is
+# displayed in the multiline-input mode onboarding UI to dismiss it.
+webconsole.input.editor.onboarding.dismiss.label=Begrepen!
+
 # LOCALIZATION NOTE (webconsole.enterKey): The text that will be used to represent the
 # Enter key in the editor onboarding UI, as well as on the Editor toolbar "Run" button
 # tooltip.
