Pontoon: Update Swedish (sv-SE) localization of SeaMonkey Co-authored-by: Peter Kihlstedt <peter.kihlstedt@gmail.com>

--- a/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
+++ b/sv-SE/suite/chrome/mailnews/addressbook/addressBook.properties
@@ -72,6 +72,7 @@ confirmRemoveThisContactTitle=Ta bort kontakt
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to remove this contact from the mailing list 'Customers List'?
 #          • John Doe
+confirmRemoveThisContact=Är du säker på att du vill ta bort denna kontakt från e-postlistan '#2'?\n• #1
 
 confirmRemove2orMoreContactsTitle=Ta bort flera kontakter
 # LOCALIZATION NOTE (confirmRemove2orMoreContacts):
@@ -80,6 +81,7 @@ confirmRemove2orMoreContactsTitle=Ta bort flera kontakter
 # #1 The number of selected contacts, always more than 1.
 # #2 The name of the containing mailing list
 # Example: Are you sure you want to remove these 3 contacts from the mailing list 'Customers List'?
+confirmRemove2orMoreContacts=Är du säker på att du vill ta bort denna kontakt från e-postlistan '#2'?;Är du säker på att du vill ta bort dessa #1 kontakter från e-postlistan '#2'?
 
 confirmDeleteThisMailingListTitle=Ta bort sändlista
 # LOCALIZATION NOTE (confirmDeleteThisMailingList):
@@ -87,18 +89,23 @@ confirmDeleteThisMailingListTitle=Ta bort sändlista
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete this mailing list?
 #          • Customers List
+confirmDeleteThisMailingList=Är du säker på att du vill ta bort denna e-postlista?\n• #1
 
+confirmDelete2orMoreMailingListsTitle=Ta bort flera e-postlistor
 # LOCALIZATION NOTE (confirmDelete2orMoreMailingLists):
 # Semicolon list of plural forms.
 # See: http://developer.mozilla.org/docs/Localization_and_Plurals
 # #1 The number of selected mailing lists, always more than 1
 # Example: Are you sure you want to delete these 3 mailing lists?
+confirmDelete2orMoreMailingLists=Är du säker på att du vill ta bort denna e-postlista?;Är du säker på att du vill ta bort dessa #1 e-postlistor?
 
+confirmDelete2orMoreContactsAndListsTitle=Ta bort kontakter och e-postlistor
 # LOCALIZATION NOTE (confirmDelete2orMoreContactsAndLists):
 # Semicolon list of and plural forms.
 # See: http://developer.mozilla.org/docs/Localization_and_Plurals
 # #1 The number of selected contacts and mailing lists, always more than 1
 # Example: Are you sure you want to delete these 3 contacts and mailing lists?
+confirmDelete2orMoreContactsAndLists=Är du säker på att du vill ta bort dessa #1 kontakter och e-postlistor?;Är du säker på att du vill ta bort dessa #1 kontakter och e-postlistor?
 
 confirmDeleteThisAddressbookTitle=Ta bort adressbok
 # LOCALIZATION NOTE (confirmDeleteThisAddressbookTitle):
@@ -114,6 +121,7 @@ confirmDeleteThisLDAPDirTitle=Ta bort lokal LDAP-katalog
 # Don't localize "\n• #1" unless your local layout comes out wrong.
 # Example: Are you sure you want to delete the local copy of this LDAP directory and all of its offline contacts?
 #          • Mozilla LDAP Directory
+confirmDeleteThisLDAPDir=Är du säker på att du vill ta bort den lokala kopian av denna LDAP-katalog och alla dess offline-kontakter?\n• #1
 
 confirmDeleteThisCollectionAddressbookTitle=Ta bort samlad adressbok
 # LOCALIZATION NOTE (confirmDeleteThisCollectionAddressbook):
@@ -123,6 +131,7 @@ confirmDeleteThisCollectionAddressbookTitle=Ta bort samlad adressbok
 # Example: If this address book is deleted, Thunderbird will no longer collect addresses.
 #          Are you sure you want to delete this address book and all of its contacts?
 #          • My Collecting Addressbook
+confirmDeleteThisCollectionAddressbook=Om den här adressboken tas bort kommer #2 inte längre samla in adresser.\nÄr du säker på att du vill ta bort denna adressbok och alla dess kontakter?\n• #1
 
 propertyPrimaryEmail=E-post
 propertyListName=Listnamn
