Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/devtools/client/debugger.properties
+++ b/he/devtools/client/debugger.properties
@@ -665,6 +665,12 @@ downloadFile.accesskey=ה
 # LOCALIZATION NOTE (inlinePreview.hide.label): Context menu item
 # for hiding the inline preview block
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
 settings.button.label=הגדרות מנפה השגיאות
 
@@ -675,6 +681,12 @@ settings.disableJavaScript.label=השבתת JavaScript
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
 settings.disableJavaScript.tooltip=השבתת JavaScript (דרושה הפעלה מחדש)
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
@@ -750,7 +762,7 @@ sourceTabs.closeOtherTabs.accesskey=א
 # LOCALIZATION NOTE (sourceTabs.closeTabsToEnd): Editor source tab context menu item
 # for closing the tabs to the end (the right for LTR languages) of the selected tab.
 sourceTabs.closeTabsToEnd=סגירת לשוניות משמאל
-sourceTabs.closeTabsToEnd.accesskey=ף
+sourceTabs.closeTabsToEnd.accesskey=ש
 
 # LOCALIZATION NOTE (sourceTabs.closeAllTabs): Editor source tab context menu item
 # for closing all tabs.
