Pontoon: Update Swedish (sv-SE) localization of Firefox Co-authored-by: Luna Jernberg <bittin@cafe8bitar.se>

--- a/sv-SE/dom/chrome/security/security.properties
+++ b/sv-SE/dom/chrome/security/security.properties
@@ -88,6 +88,8 @@ WeakCipherSuiteWarning=Denna webbplats använder chiffret RC4 för kryptering, v
 
 DeprecatedTLSVersion=Den här webbplatsen använder en föråldrad version av TLS som kommer att inaktiveras i mars 2020. Uppgradera till TLS 1.2 eller 1.3.
 
+DeprecatedTLSVersion2=Den här webbplatsen använder en föråldrad version av TLS. Uppgradera till TLS 1.2 eller 1.3.
+
 #XCTO: nosniff
 # LOCALIZATION NOTE: Do not translate "X-Content-Type-Options: nosniff".
 MimeTypeMismatch2=Resursen från “%1$S” blockerades på grund av MIME-typ (“%2$S”) obalans (X-Content-Type-Options: nosniff).
@@ -139,14 +141,6 @@ FeaturePolicyInvalidAllowValue=Funktionspolicy: Hoppar över tillåtelsevärde "
 ReferrerLengthOverLimitation=HTTP Referrer header: Längden är över gränsen “%1$S” byte - avlägsnar referrer header ned till ursprung: “%2$S”
 # LOCALIZATION NOTE: "%1$S" is the limitation length (bytes) of referrer URI, "%2$S" is the origin of the referrer URI.
 ReferrerOriginLengthOverLimitation=HTTP Referrer header: Längden för ursprung inom refferer är över gränsen “%1$S” byte - avlägsnar referrer header med ursprung “%2$S”.
-
-# X-Frame-Options
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOInvalid = Ogiltiga X-Frame-Options: “%1$S” rubrik från “%2$S” laddat i “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFODeny = Laddning nekad av X-Frame-Options: “%1$S” från “%2$S”, webbplats tillåter inte någon inramning. Försökte ladda in i “%3$S”.
-# LOCALIZATION NOTE: %1$S is the header value, %2$S is frame URI and %3$S is the parent document URI.
-XFOSameOrigin = Laddning nekad av X-Frame-Options: “%1$S” från “%2$S”, webbplats tillåter inte cross-origin ramning från “%3$S”.
 
 # X-Frame-Options
 # LOCALIZATION NOTE(XFrameOptionsInvalid): %1$S is the header value, %2$S is frame URI. Do not translate "X-Frame-Options".
