Pontoon: Update Hindi (hi-IN) localization of Firefox Co-authored-by: Ritesh Raj <ritesh07raj@gmail.com>

--- a/hi-IN/devtools/client/debugger.properties
+++ b/hi-IN/devtools/client/debugger.properties
@@ -53,6 +53,32 @@ setDirectoryRoot.accesskey=r
 removeDirectoryRoot.label=निर्देशिका रूट हटायें
 removeDirectoryRoot.accesskey=d
 
+# LOCALIZATION NOTE (blackBoxAll.label): Text associated with the blackbox context menu item
+
+# LOCALIZATION NOTE (blackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected group
+
+# LOCALIZATION NOTE (unblackBoxAllInGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected group
+
+# LOCALIZATION NOTE (blackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected group
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideGroup.label): This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected group
+
+# LOCALIZATION NOTE (blackBoxAllInDir.label): This is the text that appears in the
+# context submenu to blackbox all files inside of the selected directory
+
+# LOCALIZATION NOTE (unblackBoxAllInDir.label): This is the text that appears in the
+# context submenu to unblackbox all files inside of the selected directory
+
+# LOCALIZATION NOTE (blackBoxAllOutsideDir.label): This is the text that appears in the
+# context submenu to blackbox all files outside of the selected directory
+
+# LOCALIZATION NOTE (unblackBoxAllOutsideDir.label: This is the text that appears in the
+# context submenu to unblackbox all files outside of the selected directory
+
 # LOCALIZATION NOTE (copyFunction.label): This is the text that appears in the
 # context menu to copy the function the user selected
 copyFunction.label=फंक्शन नक़ल करें
@@ -626,6 +652,28 @@ downloadFile.accesskey=d
 # LOCALIZATION NOTE (inlinePreview.hide.label): Context menu item
 # for hiding the inline preview block
 
+# LOCALIZATION NOTE (inlinePreview.toggle.label): Context menu item
+# that will toggle display of inline preview
+
+# LOCALIZATION NOTE (inlinePreview.toggle.tooltip): Context menu item
+# tooltip that will describe toggling inline preview
+
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=डीबगर सेटिंग
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=JavaScript निष्क्रिय करें
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.tooltip): Context menu item
+# tooltip for toggling the source maps feature
+
+# LOCALIZATION NOTE (settings.toggleSourceMaps.label): Context menu item
+# label for toggling the source maps feature
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 
@@ -672,6 +720,9 @@ pauseOnAnyXHR=किसी भी URL पर रोकें
 # watchpoints sub-menu to add a "get" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
@@ -1009,10 +1060,6 @@ whyPaused.mutationBreakpointRemoved=हटाया गया:
 # in a info block explaining how the debugger is currently paused at
 # a JS execution
 
-# LOCALIZATION NOTE (whyPaused.replayForcedPause): The text that is displayed
-# in a info block explaining how the debugger is currently paused in a
-# recording.
-
 # LOCALIZATION NOTE (whyPaused.resumeLimit): The text that is displayed
 # in a info block explaining how the debugger is currently paused while stepping
 # in or out of the stack
@@ -1222,8 +1269,10 @@ WebIDLTooltip=WebIDL
 # service worker that has finished being installed.
 # LOCALIZATION NOTE (serviceWorkerInfo.activating): State displayed for a
 # service worker that is being activated.
+serviceWorkerInfo.activating=सक्रिय किया जा रहा है
 # LOCALIZATION NOTE (serviceWorkerInfo.activated): State displayed for a
 # service worker that has finished being activated.
+serviceWorkerInfo.activated=सक्रिय किया गया
 # LOCALIZATION NOTE (serviceWorkerInfo.redundant): State displayed for a
 # service worker that is redundant.
 # LOCALIZATION NOTE (serviceWorkerInfo.unknown): State displayed for a
