--- a/hi-IN/devtools/client/menus.properties
+++ b/hi-IN/devtools/client/menus.properties
@@ -46,6 +46,7 @@ browserContentToolboxMenu.accesskey = x
 webide.label = वेबIDE
 webide.accesskey = W
 
+devtoolsRecordNewTab.label = नया रिकॉर्डिंग टैब खोलें
 devtoolsSaveRecording.label = रिकॉर्डिंग सहेजें
 
 devToolboxMenuItem.label = टॉगल औज़ार
