--- a/hi-IN/devtools/client/storage.properties
+++ b/hi-IN/devtools/client/storage.properties
@@ -37,6 +37,9 @@ tree.labels.Cache=कैश भंडारण
 # each type of storage available through the Storage Tree to the side.
 table.headers.cookies.uniqueKey=अनोखा कुंजी
 
+# LOCALIZATION NOTE (table.headers.*.*):
+# These strings are the header names of the columns in the Storage Table for
+# each type of storage available through the Storage Tree to the side.
 table.headers.cookies.name=नाम
 table.headers.cookies.path=पथ
 table.headers.cookies.host=डोमेन
@@ -44,7 +47,6 @@ table.headers.cookies.expires=इसपर समाप्त
 table.headers.cookies.value=मान
 table.headers.cookies.lastAccessed=पिछली मर्तबा एक्सेस्ड
 table.headers.cookies.creationTime=को तैयार किया गया
-
 table.headers.cookies.sameSite=sameSite
 
 table.headers.localStorage.name=कुंजी
@@ -54,6 +56,7 @@ table.headers.sessionStorage.name=कुंजी
 table.headers.sessionStorage.value=मान
 
 table.headers.Cache.url=URL
+table.headers.cookies.size=आकार
 
 table.headers.Cache.status=स्थिति
 
@@ -69,6 +72,7 @@ table.headers.indexedDB.objectStores=वस्तु स्टोर
 table.headers.indexedDB.keyPath2=कुंजी रास्ता
 table.headers.indexedDB.autoIncrement=स्वचालित वृद्धि
 table.headers.indexedDB.indexes=सूची
+
 
 # LOCALIZATION NOTE (label.expires.session):
 # This string is displayed in the expires column when the cookie is Session
@@ -94,6 +98,9 @@ storage.popupMenu.deleteLabel=“%S” मिटाएँ
 # LOCALIZATION NOTE (storage.popupMenu.addItemLabel):
 # Label of popup menu action to add an item.
 storage.popupMenu.addItemLabel=वस्तु जोड़ें
+
+# LOCALIZATION NOTE (storage.popupMenu.refreshItemLabel):
+# Label of popup menu action to refresh an item.
 
 # LOCALIZATION NOTE (storage.popupMenu.deleteAllFromLabel):
 # Label of popup menu action to delete all storage items.
