--- a/hi-IN/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/hi-IN/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = अद्यतन करें
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = अद्यतन न करें
 updateLoginButtonDeny.accesskey = D
+updateLoginButtonDelete.label = सहेजे गए लॉगिन को हटाएं
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
