--- a/hi-IN/devtools/client/toolbox.properties
+++ b/hi-IN/devtools/client/toolbox.properties
@@ -13,6 +13,11 @@ toolbox.titleTemplate1=डेवलपर औज़ार - %1$S
 # The URL of the page being targeted: %2$S.
 toolbox.titleTemplate2=डेवलपर औज़ार - %1$S - %2$S
 
+# LOCALIZATION NOTE (toolbox.multiProcessBrowserToolboxTitle): Title used for
+# the Browser Toolbox when the pref `devtools.browsertoolbox.fission` is true.
+# This Browser Toolbox allows to debug the parent process as well as the content
+# processes in the same toolbox.
+
 # LOCALIZATION NOTE (toolbox.defaultTitle): This is used as the tool
 # name when no tool is selected.
 toolbox.defaultTitle=डेवलेपर औज़ार
@@ -263,9 +268,13 @@ toolbox.debugTargetInfo.type.tab=टैब
 toolbox.debugTargetInfo.connection.usb=USB
 toolbox.debugTargetInfo.connection.network=नेटवर्क
 
+# LOCALIZATION NOTE (toolbox.debugTargetInfo.reload):
+# Used as the reload button tooltip
+
 # LOCALIZATION NOTE (toolbox.debugTargetInfo.targetType.*): This is displayed as the
 # alt attribute for an icon in the toolbox header in about:devtools-toolbox,
 # to indicate what is the type of the debug target being inspected.
+toolbox.debugTargetInfo.targetType.extension=एक्स्टेंशन
 toolbox.debugTargetInfo.targetType.process=प्रक्रिया
 toolbox.debugTargetInfo.targetType.tab=टैब
 
@@ -287,3 +296,9 @@ toolbox.debugTargetErrorPage.title = त्रुटि
 # text that appears in the Error view and explains to the user that an error
 # has happened while trying to connect to a debug target
 
+# LOCALIZATION NOTE (options.deprecationNotice): This is the text that appears in the
+# settings panel for panel that will be removed in future releases.
+# This entire text is treated as a link to an MDN page.
+
+# LOCALIZATION NOTE (options.enableMultiProcessToolbox): This is the text that appears in the
+# settings panel for the checkbox that enables the Multiprocess Browser Toolbox.
